--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,5 @@
 {
   "editor.codeActionsOnSave": null,
   "javascript.validate.enable": false,
-  "html.format.enable": false,
-  "json.format.enable": false,
-  "javascript.format.enable": false,
-  "typescript.format.enable": false
+  "html.format.indentHandlebars": true
 }
